--- a/demo03/package.json
+++ b/demo03/package.json
@@ -5,5 +5,15 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack --mode production"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-loader": "^9.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-react": "^7.22.5",
+    "webpack-cli": "^5.1.4"
+  }
 }
