--- a/demo04/package.json
+++ b/demo04/package.json
@@ -5,5 +5,10 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack --mode production"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "webpack-cli": "^5.1.4"
+  }
 }
