demo07_压缩代码体积

--- a/demo07/package.json
+++ b/demo07/package.json
@@ -5,5 +5,11 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack --mode production"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
